# PAOO

./: CMakeLists.txt
src/: main.cpp  main.cpp:Zone.Identifier
tema1/inc/: byte_array.hpp
tema1/src/: byte_array.cpp
tema2/: CMakeLists.txt
tema2/inc/: Line.hpp  Point.hpp
tema2/src/: Line.cpp  Point.cpp  main.cpp
tema3/: CMakeLists.txt
tema3/inc/: Line.hpp  Point.hpp
tema3/src/: Line.cpp  Point.cpp  main.cpp
tema4/: CMakeLists.txt
tema4/inc/: FileHandle.hpp
tema4/src/: FileHandle.cpp  main.cpp
